--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -47,6 +47,9 @@ body {
     color: white;
     display: grid;
     grid-template-columns: 1fr auto;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
   }
   
   ul.about-us {
