--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,91 +1,99 @@
 body {
-    margin: 0;
-    font-size: 14px;
-  }
+  margin: 0;
+  font-size: 14px;
+}
 
-  .layout {
-    padding: 0 50px;
-    background-color: #001529;
-    overflow: hidden;
-    display: flex;
-  }
+.layout {
+  padding: 0 50px;
+  background-color: #3091d6;
+  overflow: hidden;
+  display: flex;
+}
 
-  .header {
-    align-items: stretch;
-  }
+.header {
+  align-items: stretch;
+}
 
-  .logo {
-    color: white;
-    margin: 16px 28px 16px 0;
-    display: flex;
-    align-items: center;
-    width: 120px;
-  }
-  
-  .logo > img {
-    height: 31px;
-  }
+.logo {
+  color: white;
+  margin: 16px 28px 16px 0;
+  display: flex;
+  align-items: center;
+  width: 120px;
+}
 
-  .menu { 
-    color: #ffffffa6;
-    text-decoration: none;
-    padding: 0 20px;
-    display: flex;
-    align-items: center;
-  }
+.logo > img {
+  height: 31px;
+}
 
-  .menu:hover {
-    color: white;
-    transition: color 300ms;
-  }
+.menu {
+  color: #ffffffa6;
+  text-decoration: none;
+  padding: 0 20px;
+  display: flex;
+  align-items: center;
+}
 
-  .menu.active {
-    background-color: #1890ff;
-  }
+.menu:hover {
+  color: white;
+  transition: color 300ms;
+}
 
-  .footer {
-    color: white;
-    display: grid;
-    grid-template-columns: 1fr auto;
-    width: 100%;
-    /* position: fixed;  */
-    bottom: 0;
-  }
-  
-  ul.about-us {
-    list-style: none;
-    padding: 0;
-  }
+.menu.active {
+  background-color: #1890ff;
+}
 
-  .colorful-content > .title {
-    display: inline-block;
-    margin-right: 5px;
-  }
+.footer {
+  color: white;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  width: 100%;
+  /* position: fixed;  */
+  bottom: 0;
+  background-color: #3091d6;
+  position: absolute;
+  bottom: 0
+}
 
-  .colorful-content > .content {
-    color: #1890ff;
-  }
+.footer a{
+  color: white;
+}
 
-  .colorful-content > .content a {
-    color: inherit;
-    text-decoration: none;
-  }
+ul.about-us {
+  list-style: none;
+  padding: 0;
+}
 
-  .help-and-support {
-    width: 300px;
-  }
-  .sign-in
-  { margin: 10% auto;
-    max-width: 300px;
-    text-align: center;
-  } 
-  .sign-in > p > span{
-    font-weight: 700;
-  }
+.colorful-content > .title {
+  display: inline-block;
+  margin-right: 5px;
+}
 
-  .input-text
-  {
-    font-family: Monospaced Number,Chinese Quote,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,PingFang SC,Hiragino Sans GB,Microsoft YaHei,Helvetica Neue,Helvetica,Arial,sans-serif;
+.colorful-content > .content {
+   color: white;
+}
+
+.colorful-content > .content a {
+  color: white;
+  text-decoration: none;
+}
+
+.help-and-support {
+  width: 300px;
+}
+.sign-in {
+  margin: 10% auto;
+  max-width: 300px;
+  text-align: center;
+}
+.sign-in > p > span {
+  font-weight: 700;
+}
+
+.input-text {
+  font-family: Monospaced Number, Chinese Quote, -apple-system,
+    BlinkMacSystemFont, Segoe UI, Roboto, PingFang SC, Hiragino Sans GB,
+    Microsoft YaHei, Helvetica Neue, Helvetica, Arial, sans-serif;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   margin: 0;
@@ -98,19 +106,18 @@ body {
   height: 32px;
   font-size: 14px;
   line-height: 1.5;
-  color: rgba(0,0,0,.65);
+  color: rgba(0, 0, 0, 0.65);
   background-color: #fff;
   background-image: none;
   border: 1px solid #d9d9d9;
   border-radius: 4px;
-  -webkit-transition: all .3s;
-  -o-transition: all .3s;
-  transition: all .3s;
-  }
-  .sign-in button
-  {
-    width: 100%;
-    line-height: 1.5;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.sign-in button {
+  width: 100%;
+  line-height: 1.5;
   display: inline-block;
   font-weight: 400;
   text-align: center;
@@ -124,53 +131,53 @@ body {
   font-size: 14px;
   border-radius: 4px;
   height: 32px;
-  }
-  
-  .btn{
-    color: #fff;
+}
+
+.btn {
+  color: #fff;
   background-color: #1890ff;
   border-color: #1890ff;
-  }
+}
 
-  .btn:focus, .btn:hover
-  {
-    color: #fff;
+.btn:focus,
+.btn:hover {
+  color: #fff;
   background-color: #40a9ff;
   border-color: #40a9ff;
-  }
+}
 
-input[type=checkbox]{
+input[type="checkbox"] {
   width: 14px;
   height: 14px;
 }
-.remember-me{
-float:left;
+.remember-me {
+  float: left;
 }
-.handle-info{
-margin-bottom: 47px;
+.handle-info {
+  margin-bottom: 47px;
 }
-.handle-info > a{
-float:right;
-color: #1890ff;
+.handle-info > a {
+  float: right;
+  color: #1890ff;
   background-color: transparent;
   text-decoration: none;
   outline: none;
   cursor: pointer;
-  -webkit-transition: color .3s;
-  -o-transition: color .3s;
-  transition: color .3s;
+  -webkit-transition: color 0.3s;
+  -o-transition: color 0.3s;
+  transition: color 0.3s;
 }
-.register{
-float:left;
-margin-top:0px
+.register {
+  float: left;
+  margin-top: 0px;
 }
-.register > a{
-color: #1890ff;
+.register > a {
+  color: #1890ff;
   background-color: transparent;
   text-decoration: none;
   outline: none;
   cursor: pointer;
-  -webkit-transition: color .3s;
-  -o-transition: color .3s;
-  transition: color .3s;
+  -webkit-transition: color 0.3s;
+  -o-transition: color 0.3s;
+  transition: color 0.3s;
 }
